--- a/abe-dapp/package.json
+++ b/abe-dapp/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.5",
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.2",
     "mongodb": "^4.11.0",
     "next": "^12.3.1",
     "next-auth": "^4.14.0",
