--- a/abe-dapp/package.json
+++ b/abe-dapp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.2",
     "mongodb": "^4.11.0",
