--- a/abe-try2/package.json
+++ b/abe-try2/package.json
@@ -13,9 +13,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "framer-motion": "^7.6.2",
-    "next": "13.0.0",
+    "mongodb": "^4.11.0",
+    "next": "^12.3.1",
+    "next-auth": "^4.14.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "web3": "^1.8.0",
+    "web3-eth-contract": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
