--- a/abe-try2/package.json
+++ b/abe-try2/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.6",
     "swr": "^1.3.0",
     "web3": "^1.8.0",
     "web3-eth-contract": "^1.8.0"
